--- a/userdetailstocrudcrud.html
+++ b/userdetailstocrudcrud.html
@@ -52,7 +52,7 @@
                     mobile                
                 };
 
-                axios.post("https://crudcrud.com/api/79734cfdd9464bdf9f208bc02bb0f1fc/appointmentlog",obj)
+                axios.push("https://crudcrud.com/api/79734cfdd9464bdf9f208bc02bb0f1fc/appointmentlog",obj)
                     .then((response) => {
                         showUserOnScreen(response.data);
                         //console.log(response)
@@ -66,7 +66,20 @@
 
                 //show the user details on the screen as a list using DOM manipulation
                 //showUserOnScreen(obj);
-            }            
+            }        
+            
+            window.addEventListener("DOMContentLoaded", () => {
+
+                axios.get("https://crudcrud.com/api/79734cfdd9464bdf9f208bc02bb0f1fc/appointmentlog")
+                    .then((response) => {
+                        console.log(response)
+                        for (var i=0; i<response.data.length; i++){
+                            showUserOnScreen(response.data[i]);
+                        }
+                    })
+                    .catch((error) => {console.log(error)})
+
+            })
             
             function showUserOnScreen(obj){
                     let parentElem = document.getElementById('listOfusers');
